# graphify-rust

./: .gitignore  Cargo.toml  Cross.toml  INSTALL.md  Makefile  README.md
skills/: skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-trae.md  skill-vscode.md  skill-windows.md
src/: analyze.rs  benchmark.rs  build.rs  cache.rs  cluster.rs  detect.rs  export.rs  extract.rs  hooks.rs  ingest.rs  lib.rs  llm.rs  main.rs  manifest.rs  mcp.rs  report.rs  security.rs  serve.rs  transcribe.rs  tree_html.rs  types.rs  validate.rs  watch.rs  wiki.rs
tests/: test_cluster.rs  test_detect.rs  test_report.rs  test_security.rs  test_validate.rs
