[package]
name = "graphify"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
unicode-normalization = "0.1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
globset = "0.4"
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
url = "2"
ipnetwork = "0.20"
dns-lookup = "2"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3"
